<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:materialDesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background_content_list">

    <FrameLayout
        android:id="@+id/lytToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <include layout="@layout/toolbar_transparent" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/lytToolbar">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title_detail_size"
            android:textColor="@color/color_primary"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/dummy_tittle"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/title_color"
            android:text="@string/initial_time"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.gc.materialdesign.views.ButtonFloat
                android:id="@+id/btnStart"
                android:layout_width="90dp"
                android:layout_height="90dp"
                materialDesign:rippleSpeed="17"
                android:layout_gravity="center"
                android:background="@color/color_primary"/>

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                materialDesign:rippleSpeed="20"
                android:text="@string/btn_reset"
                android:enabled="false"
                android:padding="15dp"/>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/admob_id"
        ads:adSize="SMART_BANNER"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>