<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_dark">

    <LinearLayout
        android:id="@+id/lytContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:layout_above="@+id/adView">

        <include layout="@layout/toolbar_center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background_content">

            <RelativeLayout
                android:id="@+id/lytToolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/frame_image_height">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/background_content_list">

                    <ImageView
                        android:id="@+id/imgThumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_abdominal"
                        android:scaleType="fitCenter"/>

                </FrameLayout>

                <com.gc.materialdesign.views.ButtonFloat
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/button_float_right"
                    android:background="@color/color_primary"
                    materialdesign:iconDrawable="@drawable/ic_add" />

                <com.gc.materialdesign.views.ButtonFloat
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toLeftOf="@+id/btnAdd"
                    android:layout_marginRight="@dimen/button_between"
                    android:background="@color/color_primary"
                    materialdesign:iconDrawable="@drawable/ic_play" />

            </RelativeLayout>

            <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
                android:id="@+id/prgLoading"
                android:layout_width="@dimen/progress_width"
                android:layout_height="@dimen/progress_height"
                android:visibility="gone"
                android:background="@color/color_primary" />

            <LinearLayout
                android:id="@+id/lytDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/background_content"
                android:paddingBottom="@dimen/padding_content_bottom"
                android:paddingRight="@dimen/padding_content"
                android:paddingLeft="@dimen/padding_content"
                >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_content"
                        android:lineSpacingExtra="@dimen/text_line_spacing"
                        android:textColor="@color/text_title"/>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/lblNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_sub_title"
        android:text="@string/lbl_no_result"
        android:layout_centerInParent="true"
        android:visibility="gone"
        style="@android:style/TextAppearance.Medium"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>



